--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,6 @@
     box-sizing: border-box;
 }
 
-
 ::-moz-selection { 
     color: #1a1818;
     background: #f8f1eb;
@@ -78,8 +77,6 @@ h1.hello span {
     transition: border-color 0.3s ease;
 }
 
-
-/* Vertical Sidebar */
 .sidebar {
     font-family: "Share Tech Mono", monospace;
     font-size: 200;
@@ -144,15 +141,29 @@ h1.hello span {
 }
 
 @media (min-width: 2200px) {
+
+    body {
+       
+        background-color: #121212;
+    }
+
+    .sidebar {
+        background-color: #121212;
+    }
+
+    .sidebar p{
+        letter-spacing: 0.1vw;
+    }
+
     .divider {
-        margin: 10vh;
+        margin: 20vh;
     }
 
     .container {
         align-items: center;
         display:flexbox;
         max-width: 50vw;
-        max-height: 70vh;
+        max-height: 100vh;
     }
 
     .subtext {
@@ -168,35 +179,75 @@ h1.hello span {
     }
 }
 
-
 @media (max-width: 768px) {
+    body {
+        align-items: center;
+        max-height: 120vh;
+    }
     .container {
         flex-direction: column;
         text-align: center;
     }
 
     h1.hello {
-        font-size: 15vw;
+        padding-left: 8vw;
+        font-size: 10vw;
     }
 
     .subtext {
-        margin-top: 10vh;
+        margin-top: 5vh;
         width: 100vw;
-        padding-right: 50vw;
-        font-size: 3.5vw;
+        padding-right: 52vw;
+        font-size: 2vw;
         margin-bottom: 10vh;
     }
 
+    .contact {
+        padding-left: 9vw;
+    }
     .contact p {
-        padding-left: 5vw;
-        font-size: 3vw;
+        font-size: 2vw;
     }
 
     .contact a {
-        font-size: 3vw;
+        font-size: 2vw;
     }
 
     .sidebar {
         width: 12vw;
+    }
+}
+
+@media (max-width: 475px) {
+    body {
+        align-items: center;
+    }
+    h1.hello {
+        padding-left: 2vw;
+        font-size: 16vw;
+
+        padding-bottom: 10vh;
+    }
+    .subtext {
+        margin-top: 0;
+        width: 150vw;
+        padding-right: 95vw;
+        font-size: 5vw;
+        margin-bottom: 10vh;
+    }
+
+    .contact {
+        padding-left: 0vw;
+    }
+    .contact p {
+        display: none;
+    }
+
+    .contact a {
+        font-size: 4vw;
+    }
+
+    .sidebar {
+        width: 13vw;
     }
 }
