--- a/css/workspages.css
+++ b/css/workspages.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Share+Tech+Mono&familyfamily=Dancing+Script:wght@400..700&display=swap');
 
 
-/* Reset */
 * {
     margin: 0;
     padding: 0;
@@ -24,9 +23,8 @@ body {
     overflow-x: hidden;
 }
 
-/* Vertical Sidebar */
 .sidebar {
-    font-family: "Poppins", monospace;
+    font-family: "Share Tech Mono", monospace;
     font-size: 200;
     position: fixed;
     left: 0;
@@ -38,7 +36,6 @@ body {
     align-items: center;
 }
 
-/* Sidebar link with strikethrough animation */
 .sidebar a {
     position: relative;
     color: #1a1818;
@@ -50,23 +47,22 @@ body {
 .sidebar a::before {
     content: '';
     position: absolute;
-    width: 0%; /* Initially, no width */
+    width: 0%; 
     height: 2px;
-    background-color: #1a1818; /* Color of the strikethrough */
+    background-color: #1a1818; 
     top: 65%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(90deg); /* Center the line and rotate */
+    transform: translate(-50%, -50%) rotate(90deg); 
     transition: width 0.3s ease-in-out;
 }
 
 .sidebar a:hover::before {
-    width: 100%; /* On hover, expand the width across the text */
+    width: 100%; 
 }
 
 .sidebar a:hover {
-    color: #0000007e; /* Optional: change text color on hover */
+    color: #0000007e; 
 }
-
 
 .sidebar-content {
     display: flex;
@@ -89,7 +85,6 @@ body {
     margin: 200px 0;
 }
 
-/* Initial section with brown rectangle and title */
 .initial-section {
     position: relative;
     height: 100vh;
@@ -105,7 +100,7 @@ body {
     width: 90%;
     height: 90vh;
     background-color: #1a1818;
-    transform: translateY(-100%); /* Start hidden above */
+    transform: translateY(-100%); 
     animation: slideDown 1s forwards;
 }
 
@@ -119,10 +114,9 @@ body {
     color: #ece7e1;
     opacity: 0;
     transform: translateY(1500px);
-    animation: slideUp 1s 1s forwards; /* Delayed to start after rectangle */
+    animation: slideUp 1s 1s forwards; 
 }
 
-/* Content section */
 .content-section {
     
     padding: 15px 10%;
@@ -139,26 +133,23 @@ body {
     margin-bottom: 50px;
 }
 
-/* Roles section container */
 .roles {
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px; /* Space between each role item */
-    max-width: 80%; /* Limits width to align with content */
+    gap: 40px; 
+    max-width: 80%; 
     margin-bottom: 100px;
     margin-left: auto;
-    margin-right: auto; /* Centers the entire roles section within the page */
+    margin-right: auto; 
     padding: 0 10px;
 }
 
-/* Each role item */
 .role-item {
     max-width: 250px;
 }
 
-/* Role titles */
 .role-title {
     text-decoration: underline;
     text-underline-offset: 5px;
@@ -170,7 +161,6 @@ body {
     text-transform: uppercase;
 }
 
-/* Role descriptions */
 .role-item p {
     padding-top: 10px;
     font-size: 0.9rem;
@@ -178,54 +168,58 @@ body {
     line-height: 1.6;
 }
 
-/* Link styling for URL */
-.role-item a {
-    color: #666;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-.role-item a:hover {
-    color: #333;
-}
-
-
-/* Image gallery */
 .image-gallery {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 colonnes maximum */
-    grid-gap: 20px; /* Espace entre les images */
-    justify-items: center; /* Centrer les images */
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 20px; 
+    justify-items: center; 
     padding: 50px 10%;
 }
 
-/* Images 300x300 */
 .image-gallery img {
-    width: 100%; /* Les images rempliront leur cellule */
+    width: 100%; 
     object-fit: cover;
     border-radius: 5px;
-    aspect-ratio: 1 / 1; /* Ratio 300x300 */
+    aspect-ratio: 1 / 1; 
 }
 
-/* Images 600x300 (qui prennent deux colonnes) */
 .image-gallery img.wide {
-    grid-column: span 2; /* Ces images prendront deux colonnes */
-    aspect-ratio: 2 / 1; /* Ratio 600x300 */
+    grid-column: span 2; 
+    aspect-ratio: 2 / 1; 
 }
 
+.image-gallery img.large {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+    border-radius: 5px;
+    aspect-ratio: auto; 
+    grid-column: span 3; 
+    margin-bottom: 50px;
 
+    }
 
-/* Quand l'écran dépasse 2200px de largeur */
 @media screen and (min-width: 2200px) {
+    
     body {
-        background-color: white; /* Le fond blanc autour */
-        overflow-y: scroll; /* Permettre le défilement vertical si nécessaire */
+        background-color: white; 
+        overflow-y: scroll; 
+        height: 100vh;
         
     }
     
     .container::-webkit-scrollbar {
         width: 10px;
     }
+
+    .sidebar p{
+        letter-spacing: 0.1vw;
+    }
+
+    .divider {
+        margin: 20vh;
+    }
+
     .title {
         font-size: 5vw;
     }
@@ -234,53 +228,53 @@ body {
         font-size: 1.5vw;
     }
     .container {
-        max-width: 1600px; /* Largeur du rectangle centré */
-        max-height: 900px; /* Limiter la hauteur du rectangle */
-        margin: 50px auto; /* Centrer horizontalement avec un espace en haut */
-        padding: 40px; /* Un peu d'espace à l'intérieur */
+        max-width: 1600px; 
+        max-height: 100vh; 
+        margin: 50px auto; 
+        padding: 40px; 
         margin-top: 0;
         padding-top: 0; 
-        overflow: auto; /* Assurer le défilement à l'intérieur du rectangle si le contenu est trop grand */
+        overflow: auto; 
     }
     
-    /* Ajuster les éléments internes pour ne pas dépasser du conteneur */
-    .content-section, .image-gallery, .video-container, .footer {
+    
+    .content-section, .image-gallery, .video-container {
         max-width: 100%;
-        overflow: hidden; /* Eviter les débordements */
+        overflow: hidden; 
     }
 
     .image-gallery img {
-        width: 100%; /* Adapter les images à la largeur du conteneur */
+        width: 100%; 
         height: auto;
     }
     
     video {
-        width: 100%; /* Adapter les vidéos à la largeur du conteneur */
+        width: 100%; 
         height: auto;
     }
+    
 }
 
-/* Responsiveness - Adjust layout for smaller screens */
 @media (max-width: 1208px) {
     .brown-rectangle {width: 80vw;}
     .sidebar {padding-right: 4vw;}
     .image-gallery {
-        grid-template-columns: 1fr 1fr; /* 2 colonnes pour les écrans plus petits */
+        grid-template-columns: 1fr 1fr; 
     }
     .image-gallery {
-        grid-template-columns: 1fr; /* 1 colonne pour les très petits écrans */
+        grid-template-columns: 1fr; 
     }
 
     .image-gallery img.wide {
-        grid-column: span 1; /* Les images larges occuperont une colonne entière sur petits écrans */
+        grid-column: span 1; 
     }
     .image-gallery img.large {
     width: 100%; 
-    height: auto; /* La hauteur s'ajuste automatiquement */
-    object-fit: cover; /* L'image est ajustée pour remplir son conteneur */
+    height: auto; 
+    object-fit: cover; 
     border-radius: 5px;
-    aspect-ratio: auto; /* Pas de ratio spécifique, taille libre */
-    grid-column: span 3; /* Prend trois colonnes pour les aligner différemment */
+    aspect-ratio: auto; 
+    grid-column: span 3; 
     margin-bottom: 50px;
 
     }
@@ -289,32 +283,66 @@ body {
 }
 
 @media (max-width: 480px) {
-    .image-gallery {
-        grid-template-columns: 1fr; /* 1 colonne pour les très petits écrans */
+
+    .roles {
+        padding-left: 0vw;
+        flex-direction: column;
+        gap: 20px;
+        max-width: 10vw ;
+        align-items: center;
+    }
+    .role-item {
+        text-align: center;
+    }
+
+    .title {
+        font-size: 17vw;
+        width: 80vw;
+        text-align: center;
+    }
+    .sidebar{
+        padding-right: 13vw;
+        right: 15vw;
     }
 
     .image-gallery img.wide {
-        grid-column: span 1; /* Les images larges occuperont une colonne entière sur petits écrans */
+        grid-column: span 1; 
+    }
+
+    .description {
+        font-size: 6vw;
+        line-height: 5vh;
     }
 }
 
-.image-gallery img.large {
-    width: 100%; 
-    height: auto; /* La hauteur s'ajuste automatiquement */
-    object-fit: cover; /* L'image est ajustée pour remplir son conteneur */
-    border-radius: 5px;
-    aspect-ratio: auto; /* Pas de ratio spécifique, taille libre */
-    grid-column: span 3; /* Prend trois colonnes pour les aligner différemment */
-    margin-bottom: 50px;
+@media (max-width: 400px) {
+    .sidebar{
+        padding-right: 18vw;
+    }
+}
 
+@media (max-width: 320px) {
+    .sidebar{
+        padding-right: 20vw;
+    }
+}
+
+@media (max-height: 500px) {
+
+    .title {
+        padding-bottom: 50vh;   }
+
+    .divider {
+        margin: 20vh;
+        height: 5vw;
+    }
+    
 }
     
 
-
-/* Animations */
 @keyframes slideDown {
     to {
-        transform: translateY(0); /* Move rectangle to visible position */
+        transform: translateY(0); 
     }
 }
 
@@ -342,12 +370,4 @@ video {
     font-weight: 400;
     font-size: 17px;
     padding-bottom: 50px;
-}
-
-.footer p{
-    text-align: center;
-    padding: 20px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    font-size: 14px;
 }
