--- a/css/about.css
+++ b/css/about.css
@@ -53,7 +53,7 @@ body {
     content: '';
     position: absolute;
     width: 0%;
-    height: 2px;
+    height: 0.2vh;
     background-color: #ffffff;
     top: 65%;
     left: 50%;
