--- a/css/about.css
+++ b/css/about.css
@@ -307,8 +307,8 @@ body {
         padding-left: 10vw;
     }
     .main-title {
-        margin-bottom: 0;
-        padding-top: 38vh;
+        margin-bottom: 5vh;
+        padding-top: 45vh;
         font-size: 18vw;
     }
 
