--- a/css/about.css
+++ b/css/about.css
@@ -177,6 +177,8 @@ body {
     border-color: #f8f1eb;
 }
 
+
+
 @media (min-width: 2200px) {
 
     .sidebar p{
@@ -221,7 +223,7 @@ body {
     }
 
     .button {
-        padding: 0.4vw 3vh;
+        padding: 0.8vw 3vh;
         font-size: 0.6vw;
         width: 5vw;
         height: 5vh;
@@ -336,39 +338,52 @@ body {
     }
 }
 
-@media (max-height: 500px) {
+@media (max-height: 800px) and (orientation: landscape) {
+    body {
+        max-width: 100vw;
+        max-height: 100vh;
+        align-items: center;
+    }
+
     .sidebar {
         width: 10vw;
     }
 
-    .about-container {
-        padding-left: 10vw;
+    .bottom-section {
+        padding-left: 5vw;
+        flex-direction:row;
+        align-items: center;
     }
 
     .main-title {
-        padding-top: 15vh;
-        font-size: 9vw;
+        padding-top: 0vh;
+        font-size: 6vw;
     }
 
-    .bottom-section {
-        padding-top: 0vh;
-        width: 100%;
+
+    .left {
+        width: 300%;
+        padding-right: 20vw;
+    }
+
+    .right {
+        width:200%;
     }
 
     .column h2 {
-        font-size: 3vw;
-    }
-
-    .column p {
         font-size: 2vw;
     }
 
+    .column p {
+        font-size: 1.5vw;
+    }
+
     .button {
-        align-items: center;
-        margin-bottom: 15vh;
-        height: 8vh;
-        font-size: 1.8vw;
-        padding-bottom: 5vh;
+        margin-top: -20vh;
+        margin-left: 7vw;
+        padding: 1vw 5vh;
+        font-size: 1.5vw;
         width: 15vw;
+        height: 10vh;
     }
 }
