--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -282,6 +281,7 @@ body {
     margin-bottom: 0.5vh; 
 }
 
+
 @media (max-height: 900px) or (max-width: 1800px) {
     .platform,
     .character,
@@ -363,6 +363,10 @@ body {
         width: 10vw;
     }
 
+    .moi a{
+        padding-right: 30vw;
+    }
+
     .responsive-text {
         letter-spacing: 1px;
     }
@@ -378,7 +382,9 @@ body {
     }
 }
 
-@media (max-width: 475px) {
+
+
+@media (max-width: 300px) {
     .sidebar {
         width: 15vw;
     }
@@ -391,15 +397,24 @@ body {
 
     .navigation {
         font-size: 18vw;
-        line-height: 2; /* Ajustement du line-height pour plus d'espacement */
-        padding-left: 5vw; 
-        padding-top: 7vh;
-        margin-bottom: 7vh; /* Ajouter un espace sous la navigation */
+        line-height: 2; 
+        padding-left: 10vw; 
+        padding-top: 10vh;
     }
+
+    .moi a{
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+        padding-right: 35vw;
+    }
+    .projets{
+        margin: 0vh;
+    }
+
     .info {
-        padding: 5vh 5vw;
+        padding: 1vh 5vw;
         max-width: 80vw;
-        margin-left: 3vw; /* Décalage vers la gauche pour un meilleur centrage */
+        margin-left: 7vw; 
         text-align: center;
     }
 
@@ -423,10 +438,42 @@ body {
     }
 }
 
-@media (max-width: 375px) {
+
+
+@media (max-height: 800px) and (orientation: landscape) {
     
-    .navigation {
-        padding-top: 10vh;
-        font-size: 23vw; 
+    body {
+        max-width: 100vw;
+        max-height: 100vh;
+        flex-direction: column; 
+        align-items: center;
     }
+
+    .responsive-text .first-part,
+    .responsive-text .second-part {
+        display:unset;
+    }
+
+    .sidebar{
+        font-size: 1.5vw;
+    }
+
+    .divider {
+        bottom: 10vh;
+        margin: 20vh;
+        height: 5vw;
+    }
+    .navigation {
+        margin-right: 10vw;
+        align-items: center;
+        text-align: center;
+        font-size: 10vw;
+    }
+
+    .moi a{
+        padding-right: 22vw;
+    }
+    
+    
+    
 }
