--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -51,7 +52,7 @@ body {
 .vertical-text {
     transform: rotate(-90deg);
     text-transform: uppercase;
-    letter-spacing: 0.8vw;
+    letter-spacing: 0.7vw;
 }
 
 .divider {
@@ -281,7 +282,6 @@ body {
     margin-bottom: 0.5vh; 
 }
 
-
 @media (max-height: 900px) or (max-width: 1800px) {
     .platform,
     .character,
@@ -363,10 +363,6 @@ body {
         width: 10vw;
     }
 
-    .moi a{
-        padding-right: 30vw;
-    }
-
     .responsive-text {
         letter-spacing: 1px;
     }
@@ -382,9 +378,7 @@ body {
     }
 }
 
-
-
-@media (max-width: 300px) {
+@media (max-width: 475px) {
     .sidebar {
         width: 15vw;
     }
@@ -397,24 +391,15 @@ body {
 
     .navigation {
         font-size: 18vw;
-        line-height: 2; 
-        padding-left: 10vw; 
-        padding-top: 10vh;
+        line-height: 2; /* Ajustement du line-height pour plus d'espacement */
+        padding-left: 5vw; 
+        padding-top: 7vh;
+        margin-bottom: 7vh; /* Ajouter un espace sous la navigation */
     }
-
-    .moi a{
-        padding-top: 5vh;
-        padding-bottom: 5vh;
-        padding-right: 35vw;
-    }
-    .projets{
-        margin: 0vh;
-    }
-
     .info {
-        padding: 1vh 5vw;
+        padding: 5vh 5vw;
         max-width: 80vw;
-        margin-left: 7vw; 
+        margin-left: 3vw; /* Décalage vers la gauche pour un meilleur centrage */
         text-align: center;
     }
 
@@ -438,7 +423,13 @@ body {
     }
 }
 
-
+@media (max-width: 375px) {
+    
+    .navigation {
+        padding-top: 10vh;
+        font-size: 23vw; 
+    }
+}
 
 @media (max-height: 800px) and (orientation: landscape) {
     
@@ -458,22 +449,31 @@ body {
         font-size: 1.5vw;
     }
 
+    .vertical-text:nth-child(1) {
+        margin: 3vw;
+    }
+
     .divider {
-        bottom: 10vh;
-        margin: 20vh;
+        margin: 5vw;
+        padding-bottom: 1vw;
         height: 5vw;
     }
     .navigation {
-        margin-right: 10vw;
         align-items: center;
         text-align: center;
         font-size: 10vw;
     }
-
-    .moi a{
-        padding-right: 22vw;
+    
+    .info {
+        padding: 5vh 5vw;
+        max-width: 80vw;
+        margin-left: 3vw;
+        text-align: center;
     }
-    
-    
-    
+
+    #littlenav {
+        margin-left: 0vw;
+        max-width: 100vw; 
+    }
+
 }
