--- a/css/workspages.css
+++ b/css/workspages.css
@@ -108,12 +108,12 @@ body {
     text-align: center;
     font-family: "june-expt-variable", sans-serif;
     font-variation-settings: 'STYL' 100;
-    padding-top: 300px;
+    padding-top: 0vh;
     position: relative;
     font-size: 10vw;
     color: #ece7e1;
     opacity: 0;
-    transform: translateY(1500px);
+    transform: translateY(150vh);
     animation: slideUp 1s 1s forwards; 
 }
 
@@ -197,6 +197,39 @@ body {
     grid-column: span 3; 
     margin-bottom: 50px;
 
+    }
+
+
+    @keyframes slideDown {
+        to {
+            transform: translateY(0); 
+        }
+    }
+    
+    @keyframes slideUp {
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    
+    video {
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.2); 
+        border-radius: 50px;
+        margin-top: 30px;
+        margin-bottom: 75px;
+        margin-left: 10%;
+        width: 80%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .image-description {
+        text-align: center;
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-size: 17px;
+        padding-bottom: 50px;
     }
 
 @media screen and (min-width: 2200px) {
@@ -307,7 +340,7 @@ body {
         right: 15vw;
     }
 
-    .sidebar a {
+    .vertical-text {
         font-size: 3.5vw;
     }
 
@@ -335,7 +368,7 @@ body {
 @media (orientation: landscape) {
 
     .title {
-        padding-bottom: 50vh;   }
+        padding-bottom: 10vh;   }
 
     .divider {
         margin: 20vh;
@@ -345,34 +378,8 @@ body {
 }
     
 
-@keyframes slideDown {
-    to {
-        transform: translateY(0); 
+@media (max-height: 800px) and (orientation: landscape) {
+    .title {
+        max-width: 70%;
     }
-}
-
-@keyframes slideUp {
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-video {
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2); 
-    border-radius: 50px;
-    margin-top: 30px;
-    margin-bottom: 75px;
-    margin-left: 10%;
-    width: 80%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.image-description {
-    text-align: center;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 17px;
-    padding-bottom: 50px;
 }
