--- a/css/index.css
+++ b/css/index.css
@@ -192,7 +192,7 @@ body {
 }
 #info-platform {
     opacity: 0;
-    top: 42vh;
+    top: 40vh;
     left: 69vw;
     width: 19vw;
     height: 6vh;
@@ -376,7 +376,23 @@ body {
     .responsive-text .second-part {
         display: block;
     }
+
+    .info {
+        padding-left: 10vw;
+    }
+
+    .name {
+        width: 20vw;
+        font-size: 4vw;
+        margin-bottom: 1vh;
+    }
+
+    .details {
+        font-size: 2vw;
+        margin-bottom: 1vh;
+    }
 }
+
 
 @media (max-width: 475px) {
     .sidebar {
@@ -390,13 +406,19 @@ body {
     }
 
     .navigation {
-        font-size: 18vw;
+        font-size: 11.5vh;
         line-height: 2; /* Ajustement du line-height pour plus d'espacement */
         padding-left: 5vw; 
         padding-top: 7vh;
         margin-bottom: 7vh; /* Ajouter un espace sous la navigation */
     }
+
+    #littlenav {
+        margin-left: 0vw;
+        max-width: 100vw; 
+    }
     .info {
+        margin-top: -5vh;
         padding: 5vh 5vw;
         max-width: 80vw;
         margin-left: 3vw; /* Décalage vers la gauche pour un meilleur centrage */
@@ -404,12 +426,14 @@ body {
     }
 
     .name {
-        font-size: 6vw;
+        width: 75vw;
+        font-size: 3.5vh;
         margin-bottom: 2vh;
     }
 
     .details {
-        font-size: 4vw;
+        width: 75vw;
+        font-size: 2vh;
         margin-bottom: 2vh;
     }
 
@@ -421,8 +445,23 @@ body {
     .responsive-text .second-part {
         display: block;
     }
+    .info {
+        overflow-y: hidden;
+    }
 }
 
+@media (max-height: 700px) {
+    .navigation a{
+        font-size: 10vh;
+    }
+
+    .details{
+        font-size: 3vh;
+    }
+    .name{
+        font-size: 4vh;
+    }
+}
 @media (max-width: 375px) {
     
     .navigation {
