--- a/css/work.css
+++ b/css/work.css
@@ -359,16 +359,15 @@ body {
     #description {
         margin-bottom: 10vh;
         padding-left: 8vw;
-        width: 60vw;
-        height: 1vh;
         font-size: 3vw;
     }
 
     .work-projects {
         width:100%;
         padding-top: 10vh;
+        padding-bottom: 20vh;
         padding-left: 10vw;
-        overflow-y: auto;
+        overflow-y: scroll;
     }
 
     .sidebar {
@@ -380,6 +379,60 @@ body {
 
 
 @media (max-height: 800px) and (orientation: landscape) {
+    * { align-items: center; text-align: center;}
+
+    #title{
+        padding-top: 30vh;
+        font-size: 8vw;
+        padding-right: 4vw;
+    }
+
+    #description {
+        margin-bottom: 10vh;
+        padding-right: 4vw;
+        min-width: 80vw;
+        height: 10vh;
+        font-size: 2vw;
+    }
+
+    .work-description {
+        width: 100%;
+        padding: 0 20px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .work-container {
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 20px;
+    }
+
+    .work-projects {
+        margin-top: 2vh;
+        width: 100%;
+        padding-left: 4vw;
+        overflow-y: auto;
+    }
+
+    
+    .hover-image {
+        display: none;
+    }
+
+    .work-description p {
+        font-size: 4vw;
+        line-height: 1.6;
+    }
+
+    .project h1 {
+        font-size: 10vw;
+    }
+
+    .project p {
+        font-size: 3.5vw;
+    }
+    
     body {
         max-width: 100vw;
         max-height: 100vh;
